mocha/apps/thoughtless-did/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thoughtless-did
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - thoughtless.eu
      secretName: thoughtless-did-tls
  rules:
    - host: thoughtless.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thoughtless-did
                port:
                  number: 80
